Modified Handlers, Tests based on peer feedback

--- a/aws-iotfleethub-application/aws-iotfleethub-application.json
+++ b/aws-iotfleethub-application/aws-iotfleethub-application.json
@@ -141,8 +141,7 @@
     },
     "read": {
       "permissions": [
-        "iotfleethub:DescribeApplication",
-        "iotfleethub:ListTagsForResource"
+        "iotfleethub:DescribeApplication"
       ]
     },
     "update": {
@@ -150,8 +149,7 @@
         "iotfleethub:UpdateApplication",
         "iotfleethub:DescribeApplication",
         "iotfleethub:TagResource",
-        "iotfleethub:UntagResource",
-        "iam:PassRole"
+        "iotfleethub:UntagResource"
       ]
     },
     "delete": {
